<resources>
    <string name="app_name">Ribbit2</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Sign In</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="email_hint">Email address</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_edit_friends_label">Add Friends</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_section1">InBox</string>
    <string name="title_section2">Friends</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="error_external_storage">There was a problem accessing your device\'s external storatge.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_receipt">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="action_send_label">Send</string>
    <string name="error_selecting_file_message">There was an error with the file selected. Please select a different file</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="message_icon_label">message icon</string>
    <string name="ribbit_frog_background_image">Ribbit frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">Checkmark</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>
    <string name="gcm_defaultSenderId">944343580222</string>
    <string name="view_image_title">View Message</string>
    <string name="choose_recipients_title">Choose Recipients</string>
</resources>
